rewrite matrix-matrix product to include the complex case

--- a/Content/matrix-matrix.ipynb
+++ b/Content/matrix-matrix.ipynb
@@ -4,81 +4,87 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Product of two matrices"
+    "# Matrix-matrix product"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let $\\mathbf{A}$ and $\\mathbf{B}$ be, respectively, $N \\times M$ and $M \\times L$ matrices. These matrices can be represented *element-by-element*, by using a *row partition* or by using a *colunm partition* as follows:"
+    "### Product of two real matrices"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\begin{split}\n",
+    "Let $\\mathbf{A}$ and $\\mathbf{B}$ be, respectively, $N \\times M$ and $M \\times L$ real matrices. They can be represented *element-by-element*, by using a *row partition* or by using a *colunm partition* as follows:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\begin{split}\n",
     "    \\mathbf{A} \n",
-    "    & = \\left[\n",
-    "    \\begin{array}{ccc}\n",
-    "        a_{11} & \\cdots & a_{1M} \\\\\n",
+    "    & = \\begin{bmatrix}\n",
+    "        a_{00} & \\cdots & a_{0(M-1)} \\\\\n",
     "        \\vdots &        & \\vdots \\\\\n",
-    "        a_{N1} & \\cdots & a_{NM}\n",
-    "    \\end{array}\n",
-    "    \\right]_{N \\times M} \\\\\\\\\n",
-    "    & = \\left[\n",
-    "    \\begin{array}{c}\n",
-    "        \\mathbf{A}[1,:] \\\\\n",
+    "        a_{(N-1)0} & \\cdots & a_{(N-1)(M-1)}\n",
+    "    \\end{bmatrix}_{N \\times M} \\\\\\\\\n",
+    "    & = \\begin{bmatrix}\n",
+    "        \\mathbf{A}[0 \\, , \\, : \\, ] \\\\\n",
     "        \\vdots \\\\\n",
-    "        \\mathbf{A}[N,:]\n",
-    "    \\end{array}\n",
-    "    \\right]_{N \\times M} \\\\\\\\\n",
-    "    & = \\left[\n",
-    "    \\begin{array}{ccc}\n",
-    "        \\mathbf{A}[:,1] &\n",
+    "        \\mathbf{A}[ N-1 \\, , \\, : \\, ]\n",
+    "    \\end{bmatrix}_{N \\times M} \\\\\\\\\n",
+    "    & = \\begin{bmatrix}\n",
+    "        \\mathbf{A}[ \\, : \\, , \\, 0 ] &\n",
     "        \\cdots &\n",
-    "        \\mathbf{A}[:,M]\n",
-    "    \\end{array}\n",
-    "    \\right]_{N \\times M} \\:\n",
-    "\\end{split}$$"
+    "        \\mathbf{A}[ \\, : \\, , \\, M-1]\n",
+    "    \\end{bmatrix}_{N \\times M} \\:\n",
+    "\\end{split}\n",
+    "$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\begin{split}\n",
+    "and"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\begin{split}\n",
     "    \\mathbf{B} \n",
-    "    & = \\left[\n",
-    "    \\begin{array}{ccc}\n",
-    "        b_{11} & \\cdots & b_{1L} \\\\\n",
+    "    & = \\begin{bmatrix}\n",
+    "        b_{00} & \\cdots & b_{0(L-1)} \\\\\n",
     "        \\vdots &        & \\vdots \\\\\n",
-    "        b_{M1} & \\cdots & b_{ML}\n",
-    "    \\end{array}\n",
-    "    \\right]_{M \\times L} \\\\\\\\\n",
-    "    & = \\left[\n",
-    "    \\begin{array}{c}\n",
-    "        \\mathbf{B}[1,:] \\\\\n",
+    "        b_{(M-1)0} & \\cdots & b_{(M-1)(L-1)}\n",
+    "    \\end{bmatrix}_{M \\times L} \\\\\\\\\n",
+    "    & = \\begin{bmatrix}\n",
+    "        \\mathbf{B}[0 \\, , \\, : \\, ] \\\\\n",
     "        \\vdots \\\\\n",
-    "        \\mathbf{B}[M,:]\n",
-    "    \\end{array}\n",
-    "    \\right]_{M \\times L} \\\\\\\\\n",
-    "    & = \\left[\n",
-    "    \\begin{array}{ccc}\n",
-    "        \\mathbf{B}[:,1] &\n",
+    "        \\mathbf{B}[ M-1 \\, , \\, : \\, ]\n",
+    "    \\end{bmatrix}_{M \\times L} \\\\\\\\\n",
+    "    & = \\begin{bmatrix}\n",
+    "        \\mathbf{B}[ \\, : \\, , \\, 0 ] &\n",
     "        \\cdots &\n",
-    "        \\mathbf{B}[:,L]\n",
-    "    \\end{array}\n",
-    "    \\right]_{M \\times L}\n",
-    "\\end{split} \\: ,$$"
+    "        \\mathbf{B}[ \\, : \\, , \\, L-1]\n",
+    "    \\end{bmatrix}_{M \\times L} \\:\n",
+    "\\end{split}\n",
+    "$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "where $a_{ij} = \\mathbf{A}[i,j]$ and $b_{ij} = \\mathbf{B}[i,j]$, $i = 1, ..., N$, $j = 1, ..., M$ and $k = 1, ..., L$."
+    "where $a_{ij} = \\mathbf{A}[i,j]$ and $b_{ij} = \\mathbf{B}[i,j]$, $i = 0, ..., N-1$, $j = 0, ..., M-1$ and $k = 0, ..., L-1$."
    ]
   },
   {
@@ -103,39 +109,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "with elements $c_{ij} = \\mathbf{C}[i,k]$, $i = 1, ..., N$, $k = 1, ..., L$, defined as follows:"
+    "with elements $c_{ij} = \\mathbf{C}[i,k]$, $i = 0, ..., N-1$, $k = 0, ..., L-1$, defined as follows:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\begin{split}\n",
+    "$$\n",
+    "\\begin{split}\n",
     "\\mathbf{C} \n",
-    "    & = \\left[\n",
-    "    \\begin{array}{ccc}\n",
-    "        c_{11} & \\cdots & c_{1L} \\\\\n",
+    "    & = \\begin{bmatrix}\n",
+    "        c_{00} & \\cdots & c_{0(L-1)} \\\\\n",
     "        \\vdots &        & \\vdots \\\\\n",
-    "        c_{N1} & \\cdots & c_{NL}\n",
-    "    \\end{array}\n",
-    "    \\right] \\\\\\\\\n",
-    "    & = \\left[\n",
-    "    \\begin{array}{cccc}\n",
-    "        \\left( a_{11} \\, b_{11} + \\cdots + a_{1M} \\, b_{M1} \\right) &\n",
-    "        \\left( a_{11} \\, b_{12} + \\cdots + a_{1M} \\, b_{M2} \\right) &\n",
+    "        c_{(N-1)0} & \\cdots & c_{(N-1)(L-1)}\n",
+    "    \\end{bmatrix} \\\\\\\\\n",
+    "    & = \\begin{bmatrix}\n",
+    "        \\left( a_{00} \\, b_{00} + \\cdots + a_{0(M-1)} \\, b_{(M-1)0} \\right) &\n",
     "        \\cdots &\n",
-    "        \\left( a_{11} \\, b_{1L} + \\cdots + a_{1M} \\, b_{ML} \\right) \\\\\n",
-    "        \\left( a_{21} \\, b_{11} + \\cdots + a_{2M} \\, b_{M1} \\right) &\n",
-    "        \\left( a_{21} \\, b_{12} + \\cdots + a_{2M} \\, b_{M2} \\right) &\n",
+    "        \\left( a_{10} \\, b_{0(L-1)} + \\cdots + a_{1(M-1)} \\, b_{(M-1)(L-1)} \\right) \\\\\n",
+    "        \\vdots & & \\vdots \\\\\n",
+    "        \\left( a_{(N-1)0} \\, b_{00} + \\cdots + a_{(N-1)(M-1)} \\, b_{(M-1)0} \\right) &\n",
     "        \\cdots &\n",
-    "        \\left( a_{21} \\, b_{1L} + \\cdots + a_{2M} \\, b_{ML} \\right) \\\\\n",
-    "        \\vdots & \\vdots & & \\vdots \\\\\n",
-    "        \\left( a_{N1} \\, b_{11} + \\cdots + a_{NM} \\, b_{M1} \\right) &\n",
-    "        \\left( a_{N1} \\, b_{12} + \\cdots + a_{NM} \\, b_{M2} \\right) &\n",
-    "        \\cdots &\n",
-    "        \\left( a_{N1} \\, b_{1L} + \\cdots + a_{NM} \\, b_{ML} \\right)\n",
-    "    \\end{array}\n",
-    "    \\right] \\: .    \n",
+    "        \\left( a_{(N-1)0} \\, b_{0(L-1)} + \\cdots + a_{(N-1)(M-1)} \\, b_{(M-1)(L-1)} \\right)\n",
+    "    \\end{bmatrix} \\:\\: .    \n",
     "\\end{split}\n",
     "$$"
    ]
@@ -158,10 +155,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    for i = 1:N\n",
-    "        for j = 1:L\n",
-    "            for k = 1:M\n",
-    "                C[i,j] = C[i,j] + A[i,k]*B[k,j]"
+    "    matrix_matrix_real(A, B):\n",
+    "    \n",
+    "        N, M = shape(A)\n",
+    "        M, L = shape(B)\n",
+    "        \n",
+    "        C = zeros(N,L)\n",
+    "\n",
+    "        for i = 0:N-1\n",
+    "            for j = 0:L-1\n",
+    "                for k = 0:M-1\n",
+    "                    C[i,j] += A[i,k]*B[k,j]\n",
+    "        \n",
+    "        return C"
    ]
   },
   {
@@ -175,9 +181,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    for i = 1:N\n",
-    "        for j = 1:L\n",
-    "            C[i,j] = dot(A[i,:],B[:,j])"
+    "    matrix_matrix_real(A, B):\n",
+    "    \n",
+    "        N, M = shape(A)\n",
+    "        M, L = shape(B)\n",
+    "        \n",
+    "        C = zeros(N,L)\n",
+    "\n",
+    "        for i = 0:N-1\n",
+    "            for j = 0:L-1\n",
+    "                C[i,j] = dot_real(A[i,:],B[:,j])\n",
+    "        \n",
+    "        return C"
    ]
   },
   {
@@ -198,15 +213,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    for i = 1:N\n",
-    "        C[i,:] = vecmat(A[i,:],B[:,:])"
+    "    matrix_matrix_real(A, B):\n",
+    "\n",
+    "        N, M = shape(A)\n",
+    "        M, L = shape(B)\n",
+    "\n",
+    "        C = zeros(N,L)\n",
+    "\n",
+    "        for i = 0:N-1\n",
+    "            C[i,:] = matrix_vector_real(B[:,:], A[i,:])\n",
+    "        \n",
+    "        return C"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that the i- and k-loops were removed. It is also important to notice that `A[i,:]` is a row vector and `B[:,:]` is a matrix. Could this operation be rewritten in terms of the product between `B[:,:]` and `A[i,:]`?"
+    "Notice that the i- and k-loops were removed. It is also important to notice that `A[i,:]` is a row vector and `B[:,:]` is a matrix."
    ]
   },
   {
@@ -220,8 +244,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    for j = 1:L\n",
-    "        C[:,j] = matvec(A[:,:],B[:,j])"
+    "    matrix_matrix_real(A, B):\n",
+    "\n",
+    "        N, M = shape(A)\n",
+    "        M, L = shape(B)\n",
+    "\n",
+    "        C = zeros(N,L)\n",
+    "\n",
+    "        for j = 0:L-1\n",
+    "            C[:,j] = matrix_vector_real(A[:,:], B[:,j])\n",
+    "        \n",
+    "        return C"
    ]
   },
   {
@@ -249,10 +282,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    for k = 1:M\n",
-    "        for j = 1:L\n",
-    "            for i = 1:N\n",
-    "                C[i,j] = C[i,j] + A[i,k]*B[k,j]"
+    "    for k = 0:M-1\n",
+    "        for j = 0:L-1\n",
+    "            for i = 0:N-1\n",
+    "                C[i,j] += A[i,k]*B[k,j]"
    ]
   },
   {
@@ -266,31 +299,109 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    for k = 1:M\n",
-    "        for j = 1:L\n",
-    "            C[:,j] = C[:,j] + A[:,k]*B[k,j]"
+    "    for k = 0:M-1\n",
+    "        for j = 0:L-1\n",
+    "            C[:,j] += A[:,k]*B[k,j]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that this scheme updates the colunms of `C` iteratively. Finally, remove the j-loop"
+    "Notice that this scheme updates the colunms of `C` iteratively. Finally, remove the j-loop:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    for k = 1:M\n",
-    "        C[:,:] = C[:,:] + outer(A[:,k],B[k,:])"
+    "    matrix_matrix_real(A, B):\n",
+    "\n",
+    "        N, M = shape(A)\n",
+    "        M, L = shape(B)\n",
+    "\n",
+    "        C = zeros(N,L)\n",
+    "\n",
+    "        for k = 0:M-1\n",
+    "            C[:,:] += outer_real(A[:,k], B[k,:])\n",
+    "        \n",
+    "        return C"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The term `outer(A[:,k],B[k,:])` means the outer product of the colunm vector `A[:,k]` by the row vector `B[k,:]`."
+    "### Product of two complex matrices"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let $\\mathbf{A}$ be an $N \\times M$ complex matrix and $\\mathbf{B}$ be an $M \\times L$ complex matrix given by:\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{A} = \\mathbf{A}_{R} + imag \\, \\mathbf{A}_{I}\n",
+    "$$\n",
+    "\n",
+    "and\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{B} = \\mathbf{B}_{R} + imag \\, \\mathbf{B}_{I} \\: .\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It can be shown that the product $\\mathbf{A} \\mathbf{B}$ results in the following complex matrix:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\mathbf{C} = \\mathbf{C}_{R} + imag \\, \\mathbf{C}_{I} \\: ,\n",
+    "$$\n",
+    "\n",
+    "where\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{C}_{R} = \\mathbf{A}_{R} \\mathbf{B}_{R} - \\mathbf{A}_{I} \\mathbf{B}_{I}\n",
+    "$$\n",
+    "\n",
+    "and\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{C}_{I} = \\mathbf{A}_{R} \\mathbf{B}_{I} + \\mathbf{A}_{I} \\mathbf{B}_{R} \\: .\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This product can be represented by the pseudo-code shown below:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    matrix_matrix_complex(A, B):\n",
+    "\n",
+    "        # compute the real and imaginary parts of the product\n",
+    "        C_R  = matrix_matrix_real(Re(A), Re(B))\n",
+    "        C_R -= matrix_matrix_real(Im(A), Im(B))\n",
+    "        C_I  = matrix_matrix_real(Re(A), Im(B))\n",
+    "        C_I += matrix_matrix_real(Im(A), Re(B))\n",
+    "        C = C_R + imag*C_I\n",
+    "\n",
+    "        # return the result        \n",
+    "        return C"
    ]
   },
   {
@@ -304,16 +415,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Show that these five approaches are equivalent. To do this, follow the steps below:\n",
-    "\n",
-    "1. In your `my_function.py` file, create 5 functions called `matmat_prod1`, `matmat_prod2`, `matmat_prod3`, `matmat_prod4` and `matmat_prod5` for implementing the 5 algorithms shown above, respectively. All functions must receive 2 matrices and return the resultant matrix.\n",
-    "2. In your `test_my_function.py` file, create 2 tests for each function. One test must compare the result produced by your function and an expected result produced by a specific input. The other test must compare the result produced by your function and the result produced by the routine [`numpy.dot`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.dot.html) (see the example presented below).\n",
-    "3. *Extra*: use the `%timeit` to compare your functions and the function `numpy.dot`."
+    "Create the functions below according to `template.py`: \n",
+    "* `matmat_real_dumb`\n",
+    "* `matmat_real_numba`\n",
+    "* `matmat_real_dot` \n",
+    "* `matmat_real_columns`\n",
+    "* `matmat_real_matvec`\n",
+    "* `matmat_real_outer`\n",
+    "* `matmat_complex`\n",
+    "    \n",
+    "These functions must pass the following tests defined in `tests_template.py`:\n",
+    "* `test_matmat_real_input_dont_match`\n",
+    "* `test_matmat_real_functions_compare_numpy_dot`\n",
+    "* `test_matmat_complex_compare_numpy_dot`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,102 +463,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "Missing parentheses in call to 'print'. Did you mean print(C)? (<ipython-input-8-f7bc245c8e9e>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-f7bc245c8e9e>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    print C\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m Missing parentheses in call to 'print'. Did you mean print(C)?\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 25.  28.]\n",
+      " [ 57.  64.]\n",
+      " [ 89. 100.]]\n"
      ]
     }
    ],
    "source": [
-    "print C"
+    "print(C)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Exercise"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "Consider the following rotation matrices:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "\\mathbf{R}_{1}(\\theta) = \\left[ \\begin{array}{ccc}\n",
-    "1 & 0 & 0 \\\\\n",
-    "0 & \\cos \\theta & \\sin \\theta \\\\\n",
-    "0 & -\\sin \\theta & \\cos \\theta\n",
-    "\\end{array} \\right] \\: ,\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "\\mathbf{R}_{2}(\\theta) = \\left[ \\begin{array}{ccc}\n",
-    "\\cos \\theta & 0 & -\\sin \\theta \\\\\n",
-    "0 & 1 & 0 \\\\\n",
-    "\\sin \\theta & 0 & \\cos \\theta\n",
-    "\\end{array} \\right]\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "and"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "\\mathbf{R}_{3}(\\theta) = \\left[ \\begin{array}{ccc}\n",
-    "\\cos \\theta & \\sin \\theta & 0 \\\\\n",
-    "-\\sin \\theta & \\cos \\theta & 0 \\\\\n",
-    "0 & 0 & 1\n",
-    "\\end{array} \\right] \\: .\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "Show that these matrices are orthogonal. To do this, follow the steps below:\n",
-    "\n",
-    "1. In your `my_functions.py` file, create 3 functions called `R1`, `R2` and `R3`. Each function must receive an angle $\\theta$, in degrees, and return one of the rotation matrices shown above.\n",
-    "2. In your `test_my_functions.py`, create 3 tests. Each test must verify if a particular rotation matrix is orthogonal. The tests must use your functions for computing the product between matrices."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -459,7 +498,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
