--- a/Content/matrix-vector.ipynb
+++ b/Content/matrix-vector.ipynb
@@ -30,9 +30,9 @@
     "    \\mathbf{A} \n",
     "    & = \\left[\n",
     "    \\begin{array}{ccc}\n",
-    "        a_{00} & \\cdots & a_{1(M-1)} \\\\\n",
+    "        a_{00} & \\cdots & a_{0(M-1)} \\\\\n",
     "        \\vdots &        & \\vdots \\\\\n",
-    "        a_{(N-1)1} & \\cdots & a_{(N-1)(M-1)}\n",
+    "        a_{(N-1)0} & \\cdots & a_{(N-1)(M-1)}\n",
     "    \\end{array}\n",
     "    \\right]_{N \\times M} \\\\\n",
     "    & = \\left[\n",
@@ -44,7 +44,7 @@
     "    \\right]_{N \\times M} \\\\\n",
     "    & = \\left[\n",
     "    \\begin{array}{ccc}\n",
-    "        \\mathbf{A}[:\\ , , \\, 0] &\n",
+    "        \\mathbf{A}[:\\ , \\, 0] &\n",
     "        \\cdots &\n",
     "        \\mathbf{A}[: \\, , \\, M-1]\n",
     "    \\end{array}\n",
