include notes on matrix-norms

--- a/Content/matrix-norms.ipynb
+++ b/Content/matrix-norms.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "See Golub and Van Loan (2013, sec. 2.3)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Definition"
    ]
   },
@@ -27,10 +34,10 @@
    "source": [
     "$$\n",
     "\\mathbf{A} = \\begin{bmatrix}\n",
-    "a_{11} & a_{12} & \\cdots & a_{1M} \\\\\n",
-    "a_{21} & a_{22} & \\cdots & a_{2M} \\\\\n",
+    "a_{00} & a_{01} & \\cdots & a_{0(M-1)} \\\\\n",
+    "a_{10} & a_{11} & \\cdots & a_{1(M-1)} \\\\\n",
     "\\vdots & \\vdots &  & \\vdots \\\\\n",
-    "a_{N1} & a_{N2} & \\cdots & a_{NM}\n",
+    "a_{(N-1)0} & a_{(N-1)1} & \\cdots & a_{(N-1)(M-1)}\n",
     "\\end{bmatrix}_{\\, N \\times M} \\quad .\n",
     "$$"
    ]
@@ -58,7 +65,7 @@
     "\n",
     "$$\n",
     "\\begin{split}\n",
-    "\\| \\mathbf{A} \\|_{F} &= \\sqrt{\\sum\\limits_{i = 1}^{N}\\sum\\limits_{j = 1}^{M} \\mid a_{ij} \\mid^{2}} \\\\\n",
+    "\\| \\mathbf{A} \\|_{F} &= \\sqrt{\\sum\\limits_{i = 0}^{N-1}\\sum\\limits_{j = 0}^{M-1} \\mid a_{ij} \\mid^{2}} \\\\\n",
     "&= \\sqrt{\\mathrm{Tr}\\left(\\mathbf{A}^{\\top}\\mathbf{A}\\right)}\n",
     "\\end{split} \\quad .\n",
     "$$"
@@ -89,7 +96,7 @@
     "#### 1-norm (p = 1)\n",
     "\n",
     "$$\n",
-    "\\| \\mathbf{A} \\|_{1} = \\max\\limits_{1 \\leq j \\leq M} \\, \\sum\\limits_{i = 1}^{N} \\mid a_{ij} \\mid\n",
+    "\\| \\mathbf{A} \\|_{1} = \\max\\limits_{0 \\, \\leq \\, j \\, \\leq \\, M-1} \\, \\sum\\limits_{i = 0}^{N-1} \\mid a_{ij} \\mid\n",
     "$$"
    ]
   },
@@ -100,7 +107,7 @@
     "#### $\\infty$-norm (p = $\\infty$)\n",
     "\n",
     "$$\n",
-    "\\| \\mathbf{A} \\|_{\\infty} = \\max\\limits_{1 \\leq i \\leq N} \\, \\sum\\limits_{j = 1}^{M} \\mid a_{ij} \\mid\n",
+    "\\| \\mathbf{A} \\|_{\\infty} = \\max\\limits_{0 \\, \\leq \\, i \\, \\leq \\, N-1} \\, \\sum\\limits_{j = 0}^{M-1} \\mid a_{ij} \\mid\n",
     "$$"
    ]
   },
@@ -118,7 +125,7 @@
     "Property of $p$-norms\n",
     "\n",
     "$$\n",
-    "\\| \\mathbf{A} \\mathbf{x} \\|_{p} \\leq \\| \\mathbf{A} \\|_{p} \\| \\mathbf{x} \\|_{p}\n",
+    "\\| \\mathbf{A} \\, \\mathbf{x} \\|_{p} \\leq \\| \\mathbf{A} \\|_{p} \\| \\mathbf{x} \\|_{p}\n",
     "$$"
    ]
   },
@@ -126,38 +133,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Relationship $2$-norm and norms $1$ and $\\infty$\n",
+    "Relationships between Frobenius, $2$, $1$ and $\\infty$ norms\n",
     "\n",
     "$$\n",
-    "\\| \\mathbf{x} \\|_{2} \\leq \\| \\mathbf{x} \\|_{1} \\leq \\sqrt{N} \\, \\| \\mathbf{x} \\|_{2}\n",
+    "\\| \\mathbf{A} \\|_{2} \\leq \\| \\mathbf{A} \\|_{F} \\leq \\sqrt{\\text{min} \\, (N, M)} \\; \\| \\mathbf{A} \\|_{2}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\| \\mathbf{A} \\|_{2} \\leq \\sqrt{\\| \\mathbf{A} \\|_{1} \\, \\| \\mathbf{A} \\|_{\\infty}}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\frac{1}{\\sqrt{M}} \\, \\| \\mathbf{A} \\|_{\\infty} \\leq \\| \\mathbf{A} \\|_{2} \\leq \\sqrt{N} \\, \\| \\mathbf{A} \\|_{\\infty}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\frac{1}{\\sqrt{N}} \\, \\| \\mathbf{A} \\|_{1} \\leq \\| \\mathbf{A} \\|_{2} \\leq \\sqrt{M} \\, \\| \\mathbf{A} \\|_{1}\n",
     "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Exercise"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1. Create a function called `vec_norm` that receives a numpy array 1D and an integer $p$ to define the norm. This function **must use your** `dot` **function** to compute the 2-norm. Use `p = 2` to define the 2-norm, `p = 1` to define the 1-norm and `p = 0` to define the $\\infty$-norm. Hints: (i) Use the chained conditionals `if`, `elif`, `else` (see the Software Carpentry lesson [Making Choices](http://swcarpentry.github.io/python-novice-inflammation/05-cond/index.html)). (ii) Use the function [numpy.abs](https://docs.scipy.org/doc/numpy/reference/generated/numpy.absolute.html) to compute the 1-norm. (iii) Use the function [numpy.max](https://docs.scipy.org/doc/numpy/reference/generated/numpy.ndarray.max.html) to compute the $\\infty$-norm."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "2. Create one test to verify each one of the six inequalities given below:\n",
-    "    * $f(\\mathbf{x} + \\mathbf{y}) \\leq f(\\mathbf{x}) + f(\\mathbf{y})$\n",
-    "    * $f(\\alpha \\, \\mathbf{x}) \\leq \\: \\mid \\alpha \\mid \\, f(\\mathbf{x})$\n",
-    "    * $\\mid \\mathbf{x}^{\\top}\\mathbf{y} \\mid \\leq \\| \\mathbf{x} \\|_{2} \\| \\mathbf{y} \\|_{2}$\n",
-    "    * $\\| \\mathbf{x} \\|_{2} \\leq \\| \\mathbf{x} \\|_{1} \\leq \\sqrt{N} \\, \\| \\mathbf{x} \\|_{2}$\n",
-    "    * $\\| \\mathbf{x} \\|_{\\infty} \\leq \\| \\mathbf{x} \\|_{2} \\leq \\sqrt{N} \\, \\| \\mathbf{x} \\|_{\\infty}$\n",
-    "    * $\\| \\mathbf{x} \\|_{\\infty} \\leq \\| \\mathbf{x} \\|_{1} \\leq N \\, \\| \\mathbf{x} \\|_{\\infty}$"
    ]
   }
  ],
@@ -177,7 +169,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
