rewrite vectors so that first elements have index 0

--- a/Content/flops.ipynb
+++ b/Content/flops.ipynb
@@ -23,8 +23,8 @@
     "**Product of a scalar $\\alpha$ and an $N \\times 1$ vector $\\mathbf{x}$**\n",
     "\n",
     "$$\n",
-    "\\alpha \\, \\begin{bmatrix} x_{1} \\\\ x_{2} \\\\ \\vdots \\\\ x_{N} \\end{bmatrix} = \n",
-    "\\begin{bmatrix} \\alpha \\, x_{1} \\\\ \\alpha \\, x_{2} \\\\ \\vdots \\\\ \\alpha \\, x_{N} \\end{bmatrix} \\: .\n",
+    "\\alpha \\, \\begin{bmatrix} x_{0} \\\\ x_{1} \\\\ \\vdots \\\\ x_{N-1} \\end{bmatrix} = \n",
+    "\\begin{bmatrix} \\alpha \\, x_{0} \\\\ \\alpha \\, x_{1} \\\\ \\vdots \\\\ \\alpha \\, x_{N-1} \\end{bmatrix} \\: .\n",
     "$$"
    ]
   },
@@ -58,7 +58,7 @@
     "**Dot product of two $N \\times 1$ vectors $\\mathbf{x}$ and $\\mathbf{y}$**\n",
     "\n",
     "$$\n",
-    "\\mathbf{x}^{\\top}\\mathbf{y} = x_{1} \\, y_{1} + x_{2} \\, y_{2} + \\cdots + x_{N} \\, y_{N} \\: .\n",
+    "\\mathbf{x}^{\\top}\\mathbf{y} = x_{0} \\, y_{0} + x_{1} \\, y_{1} + \\cdots + x_{N-1} \\, y_{N-1} \\: .\n",
     "$$"
    ]
   },
@@ -70,7 +70,7 @@
     "\n",
     "$$\n",
     "\\mathbf{x} \\circ \\mathbf{y} = \n",
-    "\\begin{bmatrix} x_{1} \\, y_{1} \\\\ x_{2} \\, y_{2} \\\\ \\vdots \\\\ x_{N} \\, y_{N} \\end{bmatrix} \\: .\n",
+    "\\begin{bmatrix} x_{0} \\, y_{0} \\\\ x_{1} \\, y_{1} \\\\ \\vdots \\\\ x_{N-1} \\, y_{N-1} \\end{bmatrix} \\: .\n",
     "$$"
    ]
   },
@@ -83,10 +83,10 @@
     "$$\n",
     "\\mathbf{x} \\otimes \\mathbf{y}^{\\top} = \n",
     "\\begin{bmatrix}\n",
-    "x_{1} \\, \\mathbf{y}^{\\top} \\\\\n",
-    "x_{2} \\, \\mathbf{y}^{\\top}\\\\\n",
+    "x_{0} \\, \\mathbf{y}^{\\top} \\\\\n",
+    "x_{1} \\, \\mathbf{y}^{\\top}\\\\\n",
     "\\vdots \\\\\n",
-    "x_{N} \\, \\mathbf{y}^{\\top}\n",
+    "x_{N-1} \\, \\mathbf{y}^{\\top}\n",
     "\\end{bmatrix} \\: .\n",
     "$$"
    ]
@@ -99,7 +99,7 @@
     "\n",
     "Determine the total number of flops required for computing the resulting vector (hit: use the dot product formulation).\n",
     "\n",
-    "In the notebook ([`matrix-vector.ipynb`](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/matrix-vector.ipynb)), we have learned three different ways of computing the product $\\mathbf{A} \\mathbf{x}$. What is the total number of flops associated with each one?"
+    "In the notebook ([`matrix-vector.ipynb`](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/matrix-vector.ipynb)), we have learned three different ways of computing the product $\\mathbf{A} \\mathbf{x}$ with real elements. What is the total number of flops associated with each one?"
    ]
   },
   {
@@ -110,7 +110,7 @@
     "\n",
     "Determine the total number of flops required for computing the resulting matrix.\n",
     "\n",
-    "In the notebook ([`matrix-matrix.ipynb`](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/matrix-matrix.ipynb)), we have learned five different algorithms for computing the product $\\mathbf{A} \\mathbf{B}$. What is the total number of flops associated with each one?"
+    "In the notebook ([`matrix-matrix.ipynb`](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/matrix-matrix.ipynb)), we have learned five different algorithms for computing the product $\\mathbf{A} \\mathbf{B}$ with real elements. What is the total number of flops associated with each one?"
    ]
   },
   {
@@ -157,7 +157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
