remove computational exercises

--- a/Content/block_matrices.ipynb
+++ b/Content/block_matrices.ipynb
@@ -302,37 +302,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This matrix-matrix product can be computed according to the following pseudo-code:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "    alpha1 = \n",
-    "    alpha2 = \n",
-    "    for alpha = 1:q\n",
-    "        gamma1 = \n",
-    "        gamma2 = \n",
-    "        for gamma = 1:s\n",
-    "            beta1 = \n",
-    "            beta2 = \n",
-    "            for beta = 1:r\n",
-    "                C[alpha1:alpha2, gamma1:gamma2] \n",
-    "                += matmat(A[alpha1:alpha2, beta1:beta2], \n",
-    "                          B[beta1:beta2, gamma1:gamma2])\n",
-    "                beta1 = \n",
-    "                beta2 = \n",
-    "            gamma1 = \n",
-    "            gamma2 =\n",
-    "        alpha1 = \n",
-    "        alpha2 = "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Let's now consider two particular cases. In both cases, the matrices $\\mathbf{B}$ and $\\mathbf{C}$ are replaced by vectors $\\mathbf{b}$ and $\\mathbf{c}$, respectively, as follows:"
    ]
   },
@@ -363,19 +332,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Consider an $N \\times M$ matrix $\\mathbf{A}$ formed by $r$ blocks with $M_{\\beta}$ columns each, $\\beta = 1, \\dots, r$, $M = \\sum\\limits_{\\beta = 1}^{r} M_{\\beta}$. This matrix-vector product can be computed according to the following pseudo-code:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "    j1 = \n",
-    "    j2 = \n",
-    "    for j = 1:r\n",
-    "        c += matvec(A[:, j1:j2], b[j1:j2])\n",
-    "        j1 = \n",
-    "        j2 = "
+    "Consider an $N \\times M$ matrix $\\mathbf{A}$ formed by $r$ blocks with $M_{\\beta}$ columns each, $\\beta = 1, \\dots, r$, $M = \\sum\\limits_{\\beta = 1}^{r} M_{\\beta}$."
    ]
   },
   {
@@ -396,33 +353,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Consider an $N \\times M$ matrix $\\mathbf{A}$ formed by $q$ blocks with $N_{\\alpha}$ rows each, $\\alpha = 1, \\dots, q$, $N = \\sum\\limits_{\\alpha = 1}^{q} N_{\\alpha}$. This matrix-vector product can be computed according to the following pseudo-code:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "    i1 = \n",
-    "    i2 = \n",
-    "    for i = 1:q\n",
-    "        c += matvec(A[i1:i2, :], b)\n",
-    "        i1 = \n",
-    "        i2 = "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Exercise (extra)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Determine the indices controlling the slices in the three pseudo-codes given above."
+    "Consider an $N \\times M$ matrix $\\mathbf{A}$ formed by $q$ blocks with $N_{\\alpha}$ rows each, $\\alpha = 1, \\dots, q$, $N = \\sum\\limits_{\\alpha = 1}^{q} N_{\\alpha}$."
    ]
   },
   {
@@ -501,14 +432,6 @@
     "$$\n",
     "\n",
     "where $\\tilde{\\mathbf{c}}$ and $\\breve{\\mathbf{c}}$ are the real and imaginary parts of the resulting vector $\\mathbf{c}$."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1. In your `my_function.py` file, create 2 functions called `matvec_complex` and `matmat_complex` for implementing the 2 relationships given above. Function `matvec_complex` must receive the complex matrix $\\mathbf{A}$ and the complex vector $\\mathbf{b}$ and return the resultant vector $\\mathbf{c}$. Function `matmat_complex` must receive the complex matrices  $\\mathbf{A}$ and $\\mathbf{B}$ and return the resultant matrix $\\mathbf{C}$.\n",
-    "2. In your `test_my_function.py` file, create 2 tests for each function. One test must compare the result produced by your function and an expected result produced by a specific input. The other test must compare the result produced by your function and the result produced by the routine [`numpy.dot`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.dot.html) (see the example presented below)."
    ]
   },
   {
@@ -748,7 +671,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
