link for first_steps, template.py and test_template.py

--- a/Content/first_steps_Python/templates.ipynb
+++ b/Content/first_steps_Python/templates.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "See the file [`Content/template.py`](https://github.com/birocoles/Disciplina-metodos-computacionais/blob/master/Content/template.py)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "    import package_bla as pckbla\n",
     "    import package_ble as pckble\n",
     "    import package_bli as pckbli\n",
@@ -66,6 +73,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "See the file [`Content/test_template.py`](https://github.com/birocoles/Disciplina-metodos-computacionais/blob/master/Content/test_template.py)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "    import my_functions as mf\n",
     "    import numpy as np\n",
     "    from numpy.testing import assert_almost_equal as aae\n",
@@ -99,7 +113,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Notes"
+    "# Notes"
    ]
   },
   {
@@ -120,6 +134,13 @@
    "source": [
     "Do not use [Tab](https://en.wikipedia.org/wiki/Tab_key) in your code. Replace a Tab by 4 spaces. Use only [ASCII characters](https://en.wikipedia.org/wiki/ASCII#Printable_characters)."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
